# doc-ai-analysis-starter

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENCE.md  LICENSE  MANIFEST.in  README.md  REPLICATION_CLONE.md  REPLICATION_PROMPT.md  REPLICATION_SNAPSHOT.md  conftest.py  mypy.ini  openai_responses_conformance.json  pyproject.toml
.github/prompts/: doc-analysis.prompt.yaml  doc-analysis.topic.prompt.yaml  validate-output.prompt.yaml  validate-output.validate.prompt.yaml
.github/workflows/: ai-pr-review.yml  ai-repo-review.yml  analysis.yaml  analyze.yaml  auto-merge.yaml  auto_merge.yml  ci.yml  convert.yaml  convert.yml  convert_to_markdown.yml  docs.yaml  lint.yaml  pr-review.prompt.yaml  pr-review.yaml  pr_review.yml  prompt-analysis.yml  publish.yml  release.yml  review-comment.yml  tests.yml  validate.yaml  validate.yml  validate_markdown.yml  vector.yaml  vector.yml  verify_markdown.yml
ai_doc_analysis_starter/: __init__.py  cli.py
ai_doc_analysis_starter/github/: prompts.py  validator.py
ai_doc_analysis_starter/metadata/: __init__.py
data/: apple-sec-10Q.pdf.converted.doctags  apple-sec-10Q.pdf.converted.html  apple-sec-10Q.pdf.converted.json  apple-sec-10Q.pdf.converted.txt  apple-sec-10Q.pdf.metadata.json  apple-sec-form4.pdf.converted.json  apple-sec-form4.pdf.metadata.json
data/annual-report/: acme-2023.pdf.converted.doctags  acme-2023.pdf.converted.html  acme-2023.pdf.converted.json  acme-2023.pdf.converted.md  acme-2023.pdf.converted.text  acme-2023.pdf.dc.json
data/insider-trades/: insider-trades.prompt.yaml
data/sec-8k/: amc-8k.pdf.converted.html  amc-8k.pdf.dc.json  apple 8k copy 2.converted.html  apple 8k copy 2.pdf.dc.json  apple 8k copy.converted.html  apple 8k copy.pdf.dc.json  apple 8k.converted.html  apple 8k.pdf.dc.json  apple-8k-2.converted.html  apple-8k-2.pdf.dc.json  apple-8k.pdf.converted.html  apple-8k.pdf.converted.md  apple-8k.pdf.dc.json  apple-sec-8-k.pdf.converted.doctags  apple-sec-8-k.pdf.converted.html  apple-sec-8-k.pdf.converted.json  apple-sec-8-k.pdf.converted.md  apple-sec-8-k.pdf.converted.text
data/sec-form-10q/: apple-sec-10Q.pdf.converted.md  apple-sec-10Q.pdf.metadata.json  sec-form-10q.analysis.prompt.yaml  sec-form-10q.prompt.yaml
data/sec-form-4/: apple-sec-form-4.pdf.converted.html  apple-sec-form-4.pdf.converted.json  apple-sec-form-4.pdf.metadata.json  apple-sec-form4.pdf.converted.doctags  apple-sec-form4.pdf.converted.html  apple-sec-form4.pdf.converted.json  apple-sec-form4.pdf.converted.md  apple-sec-form4.pdf.converted.txt  apple-sec-form4.pdf.metadata.json  sec-form-4-validate-prompt.yaml  sec-form-4.prompt.yaml  sec-form-4.validate.prompt.yaml
data/sec-form-8k/: apple-sec-8k.pdf.converted.doctags  apple-sec-8k.pdf.converted.html  apple-sec-8k.pdf.converted.json  apple-sec-8k.pdf.metadata.json  apple-sec-form-8k.pdf.converted.html  apple-sec-form-8k.pdf.converted.json  apple-sec-form-8k.pdf.converted.txt  apple-sec-form-8k.pdf.metadata.json  sec-form-8k.prompt.yaml
doc_ai/: __init__.py  __main__.py  batch.py  cli.py  config.py  logging.py  logging_utils.py  plugins.py  pricing.py  utils.py
doc_ai/cli/: __init__.py  __main__.py  add.py  analyze.py  common.py  config.py  convert.py  embed.py  import_cmd.py  init_workflows.py  interactive.py  manage_urls.py  new_doc_type.py  new_topic.py  pipeline.py  prompt.py  query.py  utils.py  validate.py
doc_ai/converter/: __init__.py  document_converter.py  path.py
doc_ai/github/: __init__.py  pr.py  prompts.py  validator.py  vector.py
doc_ai/metadata/: __init__.py  dublin_core.py
doc_ai/openai/: __init__.py  files.py  responses.py
doc_analysis_ai_starter/converter/: __init__.py  document_converter.py
doc_analysis_ai_starter/github/: pr.py  prompts.py
doc_analysis_ai_starter/metadata/: __init__.py
docai/: __init__.py  converter.py  pr.py  validator.py
docai/github/: prompts.py  validator.py  vector.py
docai/metadata/: __init__.py
docs/: CONTRIBUTING.md  docusaurus.config.js  intro.md  package-lock.json  package.json
docs/content/: REPLICATION_CLONE.md  REPLICATION_PROMPT.md  cli.md  configuration.md  converter.md  directory-structure.md  environment.md  github.md  interactive-shell.md  intro.md  license.md  license.mdx  metadata.md  openai.md  pr-review.md  prompts.md  readme.mdx  releases.md  scripts-and-prompts.md  scripts.md  setup.md  validation.md  workflows-and-metadata.md  workflows.md
docs/examples/: plugin_example.py
prompts/: analysis.prompt.yaml  annual-report.prompt.yaml  doc-analysis.prompt.yaml  insider-trades.prompt.yaml  pr-review.prompt.yaml  sec-8k.prompt.yaml  useful-ai-prompts.md  validate-md.prompt.yaml  validate-output.prompt.yaml  validate.prompt.yaml
scripts/: build_vector_store.py  convert.py  convert_to_markdown.py  generate_prompts.py  merge_pr.py  review_pr.py  run_analysis.py  run_bandit.py  run_prompt.py  validate.py  validate_markdown.py  validate_openai_calls.py  verify_markdown.py
tests/: __init__.py  test_analyze_doc.py  test_analyze_output_format.py  test_ci_workflow_security.py  test_cli_analyze_requires_structured.py  test_cli_batch_mode.py  test_cli_cd.py  test_cli_completion.py  test_cli_config_corrupt.py  test_cli_config_global.py  test_cli_config_permissions.py  test_cli_config_persist.py  test_cli_config_precedence.py  test_cli_config_wizard.py  test_cli_convert_no_files.py  test_cli_defaults.py  test_cli_failure_exit.py  test_cli_help.py  test_cli_import.py  test_cli_input_validation.py  test_cli_interactive.py  test_cli_logging_consistency.py  test_cli_main_features.py  test_cli_new_doc_type.py  test_cli_new_topic.py  test_cli_pipeline_dry_run_no_output.py  test_cli_prompt_commands.py  test_cli_prompt_helper.py  test_cli_prompt_missing.py  test_cli_query.py  test_cli_questionary_errors.py  test_cli_run_option.py  test_cli_show.py  test_cli_validate_mismatch.py  test_cli_warnings.py  test_cli_wizard_flows.py  test_config_wizard.py  test_convert_error_handling.py  test_convert_path_progress.py  test_convert_path_results.py  (+40 more)
(+34 files in other folders)
