[project]
name = "doc-ai-analysis-starter"
description = "Starter template for AI-powered document analysis workflows."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Alan Gunning", email = "alangunning@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "docling>=2,<3",
    "openai>=1.102.0,<2",  # Requires Responses API introduced in v1.102.0
    "httpx>=0.24,<1",
    "pydantic>=1,<3",
    "pyyaml>=6,<7",
    "requests>=2,<3",
    "anyio>=3,<5",
    "python-dotenv>=1,<2",
    "typer>=0.9,<1",
    "rich>=13,<14",
    "tiktoken>=0.7,<1",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alangunning/doc-ai-analysis-starter"
Repository = "https://github.com/alangunning/doc-ai-analysis-starter"
Issues = "https://github.com/alangunning/doc-ai-analysis-starter/issues"
Documentation = "https://alangunning.github.io/doc-ai-analysis-starter/docs/"

[project.scripts]
"doc-ai" = "doc_ai.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.1,<1",
    "pytest>=7,<9",
    "bandit>=1,<2",
]

[tool.setuptools.package-data]
"doc_ai" = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.bandit]
exclude = ["tests"]

[build-system]
requires = [
    "setuptools>=61,<75",
    "wheel>=0.38,<1",
    "setuptools_scm>=7,<9",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["doc_ai", "doc_ai.*"]
