[project]
name = "doc-ai"
description = "Starter template for AI-powered document analysis workflows."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
authors = [{name = "Alan Gunning", email = "alangunning@gmail.com"}]
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "docling>=2.50,<3",
    "openai>=1.106,<2",  # Requires Responses API introduced in v1.102.0
    "httpx>=0.28,<1",
    "pydantic>=2.11,<3",
    "pyyaml>=6.0,<7",
    "requests>=2.32,<3",
    "anyio>=4.10,<5",
    "python-dotenv>=1.1,<2",
    "typer>=0.16,<0.17",
    "rich>=14.1,<15",
    "tiktoken>=0.11,<1",
    "platformdirs>=4.4,<5",  # cross-platform config dirs
    "click-repl>=0.3,<0.4",  # enables interactive shell
    "prompt_toolkit>=3.0,<4",  # REPL backend
    "questionary>=2.1,<3",
    "python-slugify>=8,<9",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]
keywords = ["document", "analysis", "cli", "ai"]

[project.urls]
Homepage = "https://github.com/alangunning/doc-ai-analysis-starter"
Repository = "https://github.com/alangunning/doc-ai-analysis-starter"
Issues = "https://github.com/alangunning/doc-ai-analysis-starter/issues"
Documentation = "https://alangunning.github.io/doc-ai-analysis-starter/docs/"

[project.scripts]
"doc-ai" = "doc_ai.cli:main"

[project.entry-points."doc_ai.plugins"]

"example" = "docs.examples.plugin_example:app"

[project.optional-dependencies]
dev = [
    "ruff==0.12.12",
    "pytest==8.4.2",
    "bandit==1.8.6",
]

[tool.setuptools.package-data]
"doc_ai" = ["py.typed"]

[tool.setuptools_scm]

[tool.ruff]
[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.bandit]
exclude = ["tests"]

[build-system]
requires = [
    "setuptools>=61,<75",
    "wheel>=0.38,<1",
    "setuptools_scm>=7,<9",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["doc_ai", "doc_ai.*"]
